# geoips_proxy_vis

./: README.md  pyproject.toml
docs/source/releases/: v0_1_0.rst
geoips_proxy_vis/: _version.py  registered_plugins.json
geoips_proxy_vis/plugins/modules/algorithms/: geo_proxy_vis.py
geoips_proxy_vis/plugins/modules/output_formatters/: satpy_tiles_formatter.py
geoips_proxy_vis/plugins/modules/readers/: generic_satpy.py
geoips_proxy_vis/plugins/yaml/products/: geo_proxy_vis_fully_specified.yaml
my_package/plugins/modules/algorithms/: pmw_89test.py
tests/: test_all.sh
tests/configs/: g16_proxy_vis_tile_template.yaml
tests/scripts/: ahi.pvis-Fully-Specified.sh  amsr2.global_clean.89-PCT-Using-Product-Defaults.sh  g16.pvis-Fully-Specified.sh  g18.pvis-Fully-Specified.sh  get_test_data.sh  m10.pvis-Fully-Specified.sh  m11.pvis-Fully-Specified.sh  m9.pvis-Fully-Specified.sh
tile_configs/: ahi_proxy_vis_tile_template.yaml  g16_proxy_vis_tile_template.yaml  g18_proxy_vis_tile_template.yaml  m10_proxy_vis_tile_template.yaml  m11_proxy_vis_tile_template.yaml  m9_proxy_vis_tile_template.yaml
